-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 1.8.x (1.8.0 - 1.8.5)
-
2.6.18-348.el5 kernel (CentOS5.9)
-
3
-
6157
Client build fails for 2.6.18-348.el5 if o2ib is enabled.
Becouse, there is small changes in 2.6.18-348.el5 kernel that vlan_dev_vlan_id() is added in rdma_vlan_dev_vlan_id() in include/rdma/ib_addr.h, but vlan_dev_vlan_id() is defined in scsi/fc_compat.h that is no definition of lustre-lnet.m4 and o2iblnd.h.