LU-2631 build: fix o2ib build for 2.6.18-348.el5 kernel

Adding scsi/fc_compat.h to lustre-lnet.m4 and o2iblnd.h to build
o2ib modules for 2.6.18-348.el5 kernel.

Signed-off-by: Shuichi Ihara <sihara@ddn.com>
Change-Id: I496eaf9977f44e90bfde7ff68215da8e651688dd
Reviewed-on: http://review.whamcloud.com/5051
Tested-by: Hudson
Reviewed-by: Yang Sheng <yang.sheng@intel.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Liang Zhen <liang.zhen@intel.com>
Reviewed-by: Johann Lombardi <johann.lombardi@intel.com>